; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_idmap.c_idmap_alloc_name.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_idmap.c_idmap_alloc_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.idmap_hashent = type { i32 }
%struct.idmap_hashtable = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.idmap_hashent* (%struct.idmap_hashtable*, i8*, i64)* @idmap_alloc_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.idmap_hashent* @idmap_alloc_name(%struct.idmap_hashtable* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.idmap_hashtable*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.idmap_hashtable* %0, %struct.idmap_hashtable** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.idmap_hashtable*, %struct.idmap_hashtable** %4, align 8
  %8 = call i32 @idmap_alloc_hashtable(%struct.idmap_hashtable* %7)
  %9 = load %struct.idmap_hashtable*, %struct.idmap_hashtable** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = call %struct.idmap_hashent* @idmap_name_hash(%struct.idmap_hashtable* %9, i8* %10, i64 %11)
  ret %struct.idmap_hashent* %12
}

declare dso_local i32 @idmap_alloc_hashtable(%struct.idmap_hashtable*) #1

declare dso_local %struct.idmap_hashent* @idmap_name_hash(%struct.idmap_hashtable*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
